# Epoch

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
epoch/: Cargo.toml
src/: decider.rs  event_store.rs  lib.rs  strategies.rs
src/decider/: mod.rs
src/decider/repository/: event.rs  in_memory.rs  mod.rs
src/decider/repository/esdb/: mod.rs
src/decider/repository/in_memory/: mod.rs  simple.rs
src/decider/repository/in_memory/versioned_with_streams/: error.rs  mod.rs
src/repository/: event.rs  mod.rs  state.rs
src/repository/esdb/: error.rs  mod.rs
src/repository/in_memory/: mod.rs  simple.rs
src/repository/in_memory/state/: mod.rs  versioned.rs
src/repository/in_memory/versioned_with_streams/: error.rs  mod.rs
src/repository/redis/: mod.rs  versioned_event.rs  versioned_stream_snapshot.rs
src/strategies/: mod.rs
src/test/: deciders.rs  mod.rs
src/test_helpers/: deciders.rs  mod.rs  redis.rs  repository.rs
