[package]
name = "epoch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["in_memory", "esdb"]
in_memory = []
esdb = []

[dependencies]
async-trait = "0.1.53"
chrono = "0.4.19"
eventstore = "2.1.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0"
# Use 0.8.2 only here because of a weird deps bug with eventstore
# 1.x uuids are not compatible with eventstore internal uuids
uuid =  { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2.7.0"
assert_matches = "1.5.0"
