[package]
name = "epoch"
version = "1.0.0-alpha.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["in_memory", "esdb", "redis"]
in_memory = []
esdb = ["dep:eventstore", "dep:uuid", "dep:serde_json"]
redis = ["dep:redis-om"]

[dependencies]
async-trait = "0.1.53"
chrono = "0.4.26"
eventstore = { version = "2.2.0",  optional = true }
redis-om = { version = "0.1.0", features = ["json"], optional = true}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.81", optional = true }
thiserror = "1.0"
uuid =  { package = "uuid", version = "1.2.2", features = ["v4", "serde"], optional = true }

[dev-dependencies]
actix-rt = "2.7.0"
assert_matches = "1.5.0"
const-random = "0.1.15"
autoincrement = "1"
dotenv = "0.15.0"
futures = "0.3.25"
